test_regress/t/t_case_genx_bad.out
%Error: t/t_case_genx_bad.v:14:9: Use of x/? constant in generate case statement, (no such thing as 'generate casez')
                                : ... In instance t
        32'b1xxx: initial begin end
        ^~~~~~~~
%Error: Exiting due to
